--- a/BE/miniProject2/src/main/resources/application.yaml
+++ b/BE/miniProject2/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
     username: sa
     password: LK28vankhe
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/changelog-master.xml
   jpa:
     hibernate:
       ddl-auto: none
@@ -15,3 +18,7 @@ spring:
     database-platform: org.hibernate.dialect.SQLServerDialect
 app:
   host: http://localhost:8079/api/v1
+logging:
+  level:
+    liquibase: DEBUG
+
